Finished A 5.2 => Sphere and Box :neckbeard:

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,6 @@ add_subdirectory(source)
 option(WITH_TESTS "Set to enable tests." ON)
 if (WITH_TESTS)
   add_subdirectory(tests)
-  enable_testing()
-  add_test( NAME tests COMMAND tests )
+  #enable_testing()
+  #add_test( NAME tests COMMAND tests )
 endif (WITH_TESTS)
