Added and tested Box::intersect() (A 6.3) => Distance still needs some work though! :neckbeard:

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -11,3 +11,7 @@ target_link_libraries(raytracer ${FRAMEWORK_NAME} ${LIBRARIES})
 add_dependencies(raytracer glfw ${FRAMEWORK_NAME} ${COPY_BINARY})
 
 install(TARGETS raytracer DESTINATION .)
+
+add_executable(fileloader fileloader.cpp)
+target_link_libraries(fileloader ${FRAMEWORK_NAME} ${LIBRARIES})
+add_dependencies(fileloader glfw ${FRAMEWORK_NAME} ${COPY_BINARY})
